Use SmallRye BeanBag to initialize Maven RepositorySystem for compatibility with Maven 3.9